--- a/oneoffpatch/tasks/show-testvar.yml
+++ b/oneoffpatch/tasks/show-testvar.yml
@@ -1,6 +1,6 @@
 
-- name: SHOW TESTVAR testvar_id
-  debug: var=testvar_id
+- name: SHOW TESTVAR patch_id
+  debug: var=patch_id
 
-- name: SHOW TESTVAR testvar_file
-  debug: var=testvar_file
+- name: SHOW TESTVAR patch_number
+  debug: var=patch_number
