--- a/oneoffpatch/tasks/show-testvar.yml
+++ b/oneoffpatch/tasks/show-testvar.yml
@@ -2,5 +2,8 @@
 - name: SHOW TESTVAR patch_id
   debug: var=patch_id
 
+- name: SHOW TESTVAR oracle_patch_id
+  debug: var=oracle_patch_id
+
 - name: SHOW TESTVAR patch_number
   debug: var=patch_number
