--- a/oneoffpatch/tasks/build-patching-requirements.yml
+++ b/oneoffpatch/tasks/build-patching-requirements.yml
@@ -75,31 +75,36 @@
 
   - name: Update Dictionary with Database Shutdown Requirements
     set_fact:
-        required_patches: "{{ required_patches | combine({item.item.key: {'shutdown_required': ( item.stdout | trim ) }}, recursive=true) }}" 
+        required_patches: "{{ required_patches | combine({item.item.key: {'shutdown_required': ( item.stdout | trim | bool ) }}, recursive=true) }}" 
     with_items: "{{ tmp_database_shutdown_required.results }}"
     when: (tmp_database_shutdown_required.results | length > 0) and (item.stdout is defined)
 
-  # Create a list of whether Databases need to be shutdown for patching for all required patches.
-  # This will be if the patch install is requested, it is a Database patch, has not already been installed and requires a database shutdown.
-  - name: Initialize List of Database Shutdown Requirements
-    set_fact:
-        database_patching_list: [ false ]
-
-  - name: Create List of Database Patching Requirements
-    set_fact:
-          database_patching_list: "{{ database_patching_list + [ true ] }}"
-    with_dict: "{{ required_patches }}" 
-    when: item.value.install_request and item.value.database_patch and item.value.install_to_database_required and item.value.shutdown_required 
-  
-   # Summarize whether we need to shutdown Databases - this is if any Grid patching is required or if any Database patches require shutdown
+   # Summarize whether we need to shutdown Databases - this is if any Database patches require shutdown
   - name: Set Database Shutdown Needed
     set_fact:
         database_shutdown_needed: true
-    when: "(grid_shutdown_needed) or (true in database_patching_list)"
+    with_dict: "{{ required_patches }}"
+    when:
+       - item.value.install_request
+       - item.value.install_to_grid_required or item.value.install_to_database_required
+       - item.value.shutdown_required
 
   - name: Set Database Shutdown Not Needed
     set_fact:
         database_shutdown_needed: false
-    when: "(not grid_shutdown_needed) and (true not in database_patching_list)"
+    when: database_shutdown_needed is undefined
 
-  
+   # Summarize whether we need to run Datapatch - this is required if any Database patches require data patch, but need only be run once for all patches
+  - name: Set Datapatch Needed
+    set_fact:
+        datapatch_needed: true
+    with_dict: "{{ required_patches }}"
+    when:
+       - item.value.install_request
+       - item.value.install_to_grid_required or item.value.install_to_database_required
+       - item.value.datapatch_required
+
+  - name: Set Datapatch Not Needed
+    set_fact:
+        datapatch_needed: false
+    when: datapatch_needed is undefined
