--- a/oneoffpatch/tasks/main.yml
+++ b/oneoffpatch/tasks/main.yml
@@ -95,6 +95,7 @@
                               'install_request': false,
                               'install_to_grid_required':false,
                               'install_to_database_required':false,
+                              'datapatch_required':item.value.datapatch_required|default(false),
                               'shutdown_required': true}} 
                        }}
     with_dict: "{{ required_patches }}"
@@ -117,12 +118,6 @@
 
    - name: Show the Required Patches
      debug: var=required_patches
-
-   - name: (main) Start Blackout on Patching Targets to be Shutdown
-     include_tasks: manage-blackout.yml
-     vars:
-        blackout_action: start
-     when: grid_shutdown_needed or database_shutdown_needed
 
    - name: (main) Shutdown Databases
      include_tasks: shutdown-databases.yml
@@ -157,11 +152,9 @@
      with_dict: "{{ required_patches }}"
      when: item.value.install_request and item.value.install_to_database_required and item.value.postinstall != 'none'
 
-   - name: (main) Stop Blackout on Patching Targets
-     include_tasks: manage-blackout.yml
-     vars:
-        blackout_action: stop
-     when: grid_shutdown_needed or database_shutdown_needed
+   - name: (main) Apply Datapatch
+     include_tasks: run-datapatch.yml
+     when: datapatch_needed
 
   when: required_patches is defined and (install_absent_patches | bool | default(false))
 
