--- a/oneoffpatch/tasks/apply-patch.yml
+++ b/oneoffpatch/tasks/apply-patch.yml
@@ -16,7 +16,7 @@
   shell: |
           export PATH=$PATH:{{ oracle_home }}/bin 
           export OPATCH_NO_FUSER=true
-          cd {{ oracle_patch_installer_directory }}/{{ patch_number }}
+          cd {{ patch_directory }}/{{ patch_number }}
            {{ oracle_home }}/OPatch/opatch rollback -silent -id {{ patch_to_replace }}
   when: patch_to_replace != 'none'
 
@@ -24,7 +24,7 @@
   shell:  |
           export PATH=$PATH:{{ oracle_home }}/bin 
           export OPATCH_NO_FUSER=true
-          cd {{ oracle_patch_installer_directory }}/{{ patch_number }}
+          cd {{ patch_directory }}/{{ patch_number }}
            {{ oracle_home }}/OPatch/opatch apply -silent -ocmrf /tmp/ocm.rsp
 
 - name: Remove response file
