--- a/oneoffpatch/tasks/download-patch.yml
+++ b/oneoffpatch/tasks/download-patch.yml
@@ -1,13 +1,22 @@
 ---
 
+# We create a subdirectory under the Oracle patch installer directory for each patch file as there may be more than
+# one patch with the same ID (i.e. for different DBRU base versions).   To differentiate these directories we simply
+# strip the suffix from the filename.
+
+- name: Create Patch Download Directory
+  file:
+     path: "{{ patch_directory }}"
+     state: directory
+
 - name: Download patch {{ patch_number }}
-  shell: 'aws s3 cp s3://{{ dependencies_bucket_name }}/dependencies/oracle/rdbms/{{ patch_file }} {{ oracle_patch_installer_directory }}'
+  shell: 'aws s3 cp s3://{{ dependencies_bucket_name }}/dependencies/oracle/rdbms/{{ patch_file }} {{ patch_directory }}'
   args:
-     creates: "{{ oracle_patch_installer_directory }}/{{ patch_file }}"
+     creates: "{{ patch_directory }}/{{ patch_file }}"
 
 - name: Un-archive patch {{ patch_number }}
   unarchive:
-     src: "{{ oracle_patch_installer_directory }}/{{ patch_file }}"
-     dest: "{{ oracle_patch_installer_directory }}"
-     creates:  "{{ oracle_patch_installer_directory }}/{{ patch_number }}"
+     src: "{{ patch_directory }}/{{ patch_file }}"
+     dest: "{{ patch_directory }}"
+     creates:  "{{ patch_directory }}/{{ patch_number }}"
      remote_src: yes
