--- a/oneoffpatch/tasks/restart-databases.yml
+++ b/oneoffpatch/tasks/restart-databases.yml
@@ -10,14 +10,20 @@
 
 - name: Get database type
   set_fact:
-    database_type: "{{ target_hosts.split(',')[0] | regex_replace('(^.*)_.*$','\\1') }}"
+    database_type: "{{ target_host.split(',')[0] | regex_replace('(^.*)_.*$','\\1') }}"
 
-- name: Set FSFO Mode
+# Re-Enable FSFO from Associated Primary
+# (Only run from Primary for each Database Type to avoid competing startups)
+- name: Re-enable FSFO
   include_role:
      name: hmpps-delius-oracledb-ha
-     tasks_from: set-fsfo-mode.yml
+     tasks_from: enable-fsfo.yml
   vars:
      delegation_host: "{{ hostvars[groups[database_type + '_primarydb'][0]]['inventory_hostname'] }}"
-     standby1: "{{ database_type + '_standbydb1' }}"
-     standby2: "{{ database_type + '_standbydb2' }}"
+     primary_hostname: "{{ hostvars[groups[database_type + '_primarydb'][0]]['inventory_hostname'] }}"
+     fsfo_mode: "{{ hostvars[groups[database_type + '_primarydb'][0]]['fsfo_mode'] | default('disabled') }}"
      high_availability_count: "{{ database[database_type]['high_availability_count'] }}"
+  when: 
+    - database[database_type]['high_availability_count'] | int > 0
+    - hostvars[groups[database_type + '_primarydb'][0]]['fsfo_mode'] | default('disabled') | lower in ['enabled','observe','observer']
+    - group_names | select('match','.*_primarydb') | length > 0 
