--- a/oneoffpatch/tasks/run-datapatch.yml
+++ b/oneoffpatch/tasks/run-datapatch.yml
@@ -6,5 +6,7 @@
   shell:  |
           . ~/.bash_profile
           cd {{ oracle_database_oracle_home }}/OPatch
-          ./datapatch
+          ./datapatch -verbose
+  register: datapatch
   when: database_primary_sid is defined
+  failed_when: datapatch.rc !=0 or datapatch.stdout is search('command failed with errors')
