--- a/oneoffpatch/tasks/main.yml
+++ b/oneoffpatch/tasks/main.yml
@@ -19,7 +19,7 @@
 # determine the versions of Grid and Database in use and hence which vars file to use.
 # This is done by supplying oracle_vars_dir as the (local) path to the repository.
 - name: (main) Load in Oracle Environment Variables when Directory Supplied
-  include: set-oracle-paths.yml
+  include_tasks: set-oracle-paths.yml
   when: oracle_vars_dir is defined
 
 # Alternatively, use oracle_vars to manually specify exactly which vars file to use
@@ -47,7 +47,7 @@
       dependencies_bucket_name: "{{ dependencies_bucket.name }}"
 
 - name: (main) Prepare Oracle Home Version Information
-  include: get-oracle-version.yml
+  include_tasks: get-oracle-version.yml
 
 # The environment_name Ansible variable is not available in the engineering environments
 # (Do not set it in hmpps-engineering-platform-terraform as this will overwrite the
@@ -141,7 +141,7 @@
   block:
 
    - name: (main) Prepare Patch Information
-     include: build-patching-requirements.yml
+     include_tasks: build-patching-requirements.yml
 
    - name: Show the Required Patches
      debug: var=required_patches
@@ -154,7 +154,8 @@
      include_tasks: shutdown-grid.yml
      when: grid_shutdown_needed
 
-   - name: (main) Install Patches
+    # Patching which are to be installed using OPatch are done here
+   - name: (main) Install Patches using OPatch
      include_tasks: install-patches.yml
      vars:
         patch_number: "{{ item.value.patch_number }}"
@@ -166,7 +167,10 @@
         rollback_from_database: "{{ item.value.database_rollback_required }}"
         rollback_from_grid: "{{ item.value.grid_rollback_required }}" 
      with_dict: "{{ required_patches }}"
-     when: item.value.install_request and ((item.value.install_to_grid_required) or (item.value.install_to_database_required))
+     when:
+         - item.value.install_request
+         - ((item.value.install_to_grid_required) or (item.value.install_to_database_required))
+         - not item.value.install_with_opatchauto
 
    - name: (main) Restart Grid
      include_tasks: restart-grid.yml
@@ -187,6 +191,21 @@
    - name: (main) Apply Datapatch
      include_tasks: run-datapatch.yml
      when: datapatch_needed
+
+     # Patching which are to be installed using OPatchauto are done here
+     # (We only use this for Grid patches)
+    - name: (main) Install Patches using OPatchauto
+      include_tasks: run-opatchauto.yml
+      vars:
+        patch_number: "{{ item.value.patch_number }}"
+        grid_patch_directory: "{{ item.value.grid_patch_directory }}"
+        oracle_home: "{{ oracle_grid_oracle_home }}"
+        patch_directory: "{{ item.value.grid_patch_directory }}"
+      with_dict: "{{ required_patches }}"
+      when:
+        - item.value.install_request
+        - item.value.install_to_grid_required
+        - item.value.install_with_opatchauto
 
   when: required_patches is defined and (install_absent_patches | bool | default(false))
 
