--- a/oneoffpatch/tasks/run-opatchauto.yml
+++ b/oneoffpatch/tasks/run-opatchauto.yml
@@ -15,6 +15,8 @@
   register: run_opatchauto
   become: true
   become_user: root
+  vars:
+     ansible_remote_tmp: /tmp/.ansible
 
 - name: Wait for OPatchauto Install
   async_status:
@@ -25,3 +27,5 @@
   delay: 30
   become: true
   become_user: root
+  vars:
+     ansible_remote_tmp: /tmp/.ansible
