Default value of install with OPatch Auto

--- a/oneoffpatch/tasks/build-patching-requirements.yml
+++ b/oneoffpatch/tasks/build-patching-requirements.yml
@@ -89,7 +89,7 @@
         - item.value.install_request
         - item.value.grid_patch
         - item.value.install_to_grid_required
-        - not item.value.install_with_opatchauto
+        - not (item.value.install_with_opatchauto | default(false))
      
   # Summarize whether we need to shutdown Grid - this is if any Grid patching is required
   - name: Set Grid Shutdown Needed
